--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,6 @@
-*.py linguist-language=Python
+static/* linguist-vendored
+templates/* linguist-vendored
+
+*.html linguist-vendored
+*.js linguist-vendored
+*.css linguist-vendored
