--- a/.gitattributes
+++ b/.gitattributes
@@ -3,5 +3,4 @@ templates/* linguist-vendored
 
 *.html linguist-vendored
 *.js linguist-vendored
-*.css linguist-vendored
-*.scss linguist-vendored
+*.*ss linguist-vendored
